--- a/Image_Stitching.ipynb
+++ b/Image_Stitching.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import imutils\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -123,6 +122,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@0.377] global /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/opencv_contrib-4.6.0/modules/xfeatures2d/misc/python/shadow_sift.hpp (15) SIFT_create DEPRECATED: cv.xfeatures2d.SIFT_create() is deprecated due SIFT tranfer to the main repository. https://github.com/opencv/opencv/issues/16736\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -137,22 +143,14 @@
     "\n",
     "\n",
     "# \"Enter the number of images you want to concantenate:\"\n",
-    "no_of_images = 3\n",
+    "no_of_images = 2\n",
     "# \"Enter the image name in order of left to right in way of concantenation:\"\n",
-    "filename = ['images/scene1_a.jpeg', 'images/scene1_b.jpeg', 'images/scene1_c.jpeg']\n",
+    "filename = ['nachtwacht1.jpg', 'nachtwacht2.jpg']\n",
     "\n",
     "images = []\n",
     "\n",
     "for i in range(no_of_images):\n",
     "    images.append(cv2.imread(filename[i]))\n",
-    "\n",
-    "#We need to modify the image resolution and keep our aspect ratio use the function imutils\n",
-    "\n",
-    "for i in range(no_of_images):\n",
-    "    images[i] = imutils.resize(images[i], width=400)\n",
-    "\n",
-    "for i in range(no_of_images):\n",
-    "    images[i] = imutils.resize(images[i], height=400)\n",
     "\n",
     "\n",
     "if no_of_images==2:\n",
@@ -185,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
