--- a/Image_Stitching.ipynb
+++ b/Image_Stitching.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -118,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@0.377] global /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/opencv_contrib-4.6.0/modules/xfeatures2d/misc/python/shadow_sift.hpp (15) SIFT_create DEPRECATED: cv.xfeatures2d.SIFT_create() is deprecated due SIFT tranfer to the main repository. https://github.com/opencv/opencv/issues/16736\n"
+      "[ WARN:0@0.429] global /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/opencv_contrib-4.6.0/modules/xfeatures2d/misc/python/shadow_sift.hpp (15) SIFT_create DEPRECATED: cv.xfeatures2d.SIFT_create() is deprecated due SIFT tranfer to the main repository. https://github.com/opencv/opencv/issues/16736\n"
      ]
     },
     {
@@ -134,7 +135,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,14 +144,20 @@
     "\n",
     "\n",
     "# \"Enter the number of images you want to concantenate:\"\n",
-    "no_of_images = 2\n",
+    "no_of_images = 3\n",
     "# \"Enter the image name in order of left to right in way of concantenation:\"\n",
-    "filename = ['nachtwacht1.jpg', 'nachtwacht2.jpg']\n",
+    "filename = ['scene1_a.jpg', 'scene1_b.jpg', 'scene1_c.jpg']\n",
     "\n",
     "images = []\n",
     "\n",
     "for i in range(no_of_images):\n",
     "    images.append(cv2.imread(filename[i]))\n",
+    "\n",
+    "#We need to modify the image resolution and keep our aspect ratio use the function imutils\n",
+    "\n",
+    "for i in range(no_of_images):\n",
+    "    images[i] = cv2.resize(images[i], (2500, 2500))\n",
+    "\n",
     "\n",
     "\n",
     "if no_of_images==2:\n",
