--- a/Image_Stitching.ipynb
+++ b/Image_Stitching.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -44,7 +43,7 @@
     "\n",
     "def matchKeypoints(KeypointsA, KeypointsB, featuresA, featuresB,lowe_ratio, max_Threshold):\n",
     "\n",
-    "    AllMatches = get_Allpossible_Match(featuresA,featuresB);\n",
+    "    AllMatches = get_Allpossible_Match(featuresA,featuresB)\n",
     "    valid_matches = All_validmatches(AllMatches,lowe_ratio)\n",
     "\n",
     "    if len(valid_matches) > 4:\n",
@@ -64,30 +63,6 @@
     "\n",
     "    return result_image\n",
     "\n",
-    "def get_points(imageA,imageB):\n",
-    "\n",
-    "    (hA, wA) = imageA.shape[:2]\n",
-    "    (hB, wB) = imageB.shape[:2]\n",
-    "    vis = np.zeros((max(hA, hB), wA + wB, 3), dtype=\"uint8\")\n",
-    "    vis[0:hA, 0:wA] = imageA\n",
-    "    vis[0:hB, wA:] = imageB\n",
-    "\n",
-    "    return vis\n",
-    "\n",
-    "\n",
-    "def draw_Matches(imageA, imageB, KeypointsA, KeypointsB, matches, status):\n",
-    "\n",
-    "    (hA,wA) = imageA.shape[:2]\n",
-    "    vis = get_points(imageA,imageB)\n",
-    "\n",
-    "    # loop over the matches\n",
-    "    for ((trainIdx, queryIdx), s) in zip(matches, status):\n",
-    "        if s == 1:\n",
-    "            ptA = (int(KeypointsA[queryIdx][0]), int(KeypointsA[queryIdx][1]))\n",
-    "            ptB = (int(KeypointsB[trainIdx][0]) + wA, int(KeypointsB[trainIdx][1]))\n",
-    "            cv2.line(vis, ptA, ptB, (0, 255, 0), 1)\n",
-    "\n",
-    "    return vis\n",
     "\n",
     "\n",
     "def image_stitch(images, lowe_ratio=0.75, max_Threshold=4.0,match_status=False):\n",
@@ -108,11 +83,6 @@
     "    result_image = getwarp_perspective(imageA,imageB,Homography)\n",
     "    result_image[0:imageB.shape[0], 0:imageB.shape[1]] = imageB\n",
     "\n",
-    "    # check to see if the keypoint matches should be visualized\n",
-    "    if match_status:\n",
-    "        vis = draw_Matches(imageA, imageB, KeypointsA, KeypointsB, matches,status)\n",
-    "\n",
-    "        return (result_image, vis)\n",
     "\n",
     "    return result_image\n"
    ]
@@ -121,55 +91,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ WARN:0@0.429] global /private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_11nitadzeg/croot/opencv-suite_1691620374638/work/opencv_contrib-4.6.0/modules/xfeatures2d/misc/python/shadow_sift.hpp (15) SIFT_create DEPRECATED: cv.xfeatures2d.SIFT_create() is deprecated due SIFT tranfer to the main repository. https://github.com/opencv/opencv/issues/16736\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# \"Enter the number of images you want to concantenate:\"\n",
-    "no_of_images = 3\n",
     "# \"Enter the image name in order of left to right in way of concantenation:\"\n",
-    "filename = ['scene1_a.jpg', 'scene1_b.jpg', 'scene1_c.jpg']\n",
+    "filename = ['nachtwacht1.jpg', 'nachtwacht2.jpg']\n",
     "\n",
     "images = []\n",
     "\n",
-    "for i in range(no_of_images):\n",
+    "for i in range(2):\n",
     "    images.append(cv2.imread(filename[i]))\n",
     "\n",
-    "#We need to modify the image resolution and keep our aspect ratio use the function imutils\n",
-    "\n",
-    "for i in range(no_of_images):\n",
-    "    images[i] = cv2.resize(images[i], (2500, 2500))\n",
+    "result_image = image_stitch([images[0], images[1]], match_status=True)\n",
     "\n",
     "\n",
+    "cv2.imwrite(\"Panorama_image.jpg\", result_image)\n",
     "\n",
-    "if no_of_images==2:\n",
-    "    (result, matched_points) = image_stitch([images[0], images[1]], match_status=True)\n",
-    "else:\n",
-    "    (result, matched_points) = image_stitch([images[no_of_images-2], images[no_of_images-1]], match_status=True)\n",
-    "    for i in range(no_of_images - 2):\n",
-    "        (result, matched_points) = image_stitch([images[no_of_images-i-3],result], match_status=True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "cv2.imwrite(\"Panorama_image.jpg\",result)\n",
     "\n"
    ]
   }
@@ -190,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
